[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-voxcpm"
version = "1.0.0"
authors = [{ name = "Guoyang Zeng" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "VoxCPM inference engine based on Nano-vLLM"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "xxhash",
    "torchaudio",
    "tqdm",
    "numpy",
    "pydantic",
    "flash-attn", # 如果安装失败，可以先注释掉，单独自行安装 flash-attn 官方仓库上编译好的 whl 。
    "fastapi[standard]>=0.124.2",
    "setuptools>=80.9.0",
    "pytest>=9.0.2",
    "pydantic-settings>=2.12.0",
    "soundfile>=0.13.1",
    "ffmpeg-python>=0.2.0",
]

[project.urls]
Homepage="https://github.com/a710128/nanovllm-voxcpm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm_voxcpm*"]
